--- a/TrillionBeauty/package.json
+++ b/TrillionBeauty/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@types/geojson": "^7946.0.12",
+    "@types/maplibre-gl": "^1.14.0",
     "bootstrap": "^5.3.2",
+    "maplibre-gl": "^3.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
