--- a/TrillionBeauty/package.json
+++ b/TrillionBeauty/package.json
@@ -21,6 +21,7 @@
     "@types/geojson": "^7946.0.12",
     "@types/maplibre-gl": "^1.14.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "maplibre-gl": "^3.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
