--- a/TrillionBeauty/package.json
+++ b/TrillionBeauty/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "server": "json-server --watch ./src/assets/db/products.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
